# pipeliner

./: .gitignore  main.py  pyproject.toml
pipeliner/: connection.py  constants.py  util.py
pipeliner/actors/: __init__.py  artist.py  node.py
pipeliner/tasks/: __init__.py  state.py  status.py  task.py  type.py
tools/: setup_env.ps1
