[tool.poetry]
name = "pipeliner"
version = "0.1.0"
description = ""
authors = ["Ondrej Samohel <ondrej.samohel@orbi.tools>"]

[tool.poetry.dependencies]
python = "^3.9"
pyglet = "^2.0.7"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^24.3"
flake8 = "^4.0.1"
flake8-bugbear = "^21.9.2"
flake8-comprehensions = "^3.6.1"
flake8-docstrings = "^1.6.0"
wemake-python-styleguide = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
